test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external-dns
  labels:
    app: hugo
  name: test
spec:
  ports:
  - name: hugo-test
    port: 1313
    protocol: TCP
    targetPort: 1313
  selector:
    app: hugo
  type: ClusterIP
