wks-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test.wks.kingdonb.dev
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-staging
  creationTimestamp: null
  name: wks-test
  namespace: external-dns
spec:
  rules:
  - host: test.wks.kingdonb.dev
    http:
      paths:
      - backend:
          service:
            name: hugo-test
            port:
              number: 1313
        path: /
        pathType: Exact
  tls:
  - hosts:
    - test.wks.kingdonb.dev
    secretName: test-cert-tls
status:
  loadBalancer: {}
